@@ -952,7 +952,7 @@ EXTRA_DIST += \
 	Source/WebCore/inspector/CodeGeneratorInspector.py \
 	Source/WebCore/inspector/InjectedScriptSource.js \
 	Source/WebCore/inspector/Inspector.json \
-	Source/WebCore/inspector/Inspector-0.1.json \
+	Source/WebCore/inspector/Inspector-1.0.json \
 	Source/WebCore/inspector/generate-inspector-protocol-version \
 	Source/WebCore/inspector/xxd.pl \
 	Source/WebCore/LICENSE-APPLE \
